# yahoo_finance_client

./: .coveragerc  .gitignore  .pre-commit-config.yaml  COVERAGE_README.md  Makefile  README.md  TODO.md  const.py  logging_conf.py  logging_config.py  main.py  package-lock.json  pyproject.toml  urls.txt
.github/: copilot-instructions.md
.github/workflows/: ai_review.yml  ci.yml  claude_code_review.yml  codex_review  pr.yml  test-coverage.yml  test.yml
.kiro/specs/unit-tests/: design.md  requirements.md  tasks.md
postman_collection/: Yahoo Finance.postman_collection.json
scripts/: ci-test.sh  coverage.py  fetch_mocks.py  logging_config.py  main.py  perf_test.py  run-tests.sh  test-coverage.sh  test_runner.py  yfinance_test.py
src/: __init__.py  client.py  const.py  main.py  stonk.py  utils.py
src/yafin/: __init__.py  client.py  const.py  exceptions.py  stonk.py  symbol.py  utils.py
tests/: __init__.py  assertions.py  conftest.py  const.py  test_client.py  test_main.py  test_stonk.py  test_utils.py  utils.py
tests/fixtures/: __init__.py  api_responses.py  test_data.py
tests/integration/: __init__.py  test_client.py  test_stonk.py  test_symbol.py
tests/performance/: test_baseline.py  test_stonk.py  test_stonk_baseline.py
tests/unit/: conftest.py  test_client.py  test_stonk.py  test_symbol.py  test_utils.py
tests/unit/fixtures/: chart.json  currencies.json  insights.json  market_summaries.json  options.json  qs_all_modules.json  qs_asset_profile.json  qs_balance_sheet_history.json  qs_balance_sheet_history_quarterly.json  qs_calendar_events.json  qs_cashflow_statement_history.json  qs_cashflow_statement_history_quarterly.json  qs_default_key_statistics.json  qs_earnings.json  qs_earnings_history.json  qs_earnings_trend.json  qs_esg_scores.json  qs_financial_data.json  qs_fund_ownership.json  qs_income_statement_history.json  qs_income_statement_history_quarterly.json  qs_index_trend.json  qs_industry_trend.json  qs_insider_holders.json  qs_insider_transactions.json  qs_institution_ownership.json  qs_major_direct_holders.json  qs_major_holders_breakdown.json  qs_net_share_purchase_activity.json  qs_page_views.json  qs_price.json  qs_quote_type.json  qs_recommendation_trend.json  qs_sec_filings.json  qs_sector_trend.json  qs_summary_detail.json  qs_summary_profile.json  qs_upgrade_downgrade_history.json  quotes.json  recommendations.json  (+5 more)
yafin/: client.py  const.py  stonk.py  utils.py
yfas/: stonk.py
