[project]
name = "yafin"
version = "0.1.0"
description = "Unofficial Yahoo Finance API asynchronous client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "curl-cffi>=0.13.0",
    "logging>=0.4.9.6",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "mypy>=1.17.1",
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.0.0",
    "poethepoet>=0.37.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
# extend-exclude = ["tests/unit/conftest.py"]

[tool.ruff.lint]
extend-select = ["E501", "N", "R", "I", "C901", "PD", "NPY", "D"]
ignore = ["D100", "D104", "D107", "D205"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
explicit_package_bases = true
check_untyped_defs = true
disallow_untyped_calls = false
disable_error_code = ["no-any-return", "misc"]

[tool.pytest.ini_options]
markers = ["integration: marks tests that hit real external services or APIs"]
addopts = "--cov=yafin --cov-report=term-missing --cov-branch"
testpaths = ["tests"]
